Fixed Navbar collapse issue

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -47,3 +47,7 @@ body {
   margin-bottom: 5rem !important;
 }
 
+#navbarBasicExample{
+  background-color: #050527;
+  border-bottom: 1px solid white;
+}
